[package]
name = "app"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.6"
dlopen_derive = "0.1.3"

[lib]
crate-type = ["dylib", "rlib"]
